--- a/Dockerfile.nextjs
+++ b/Dockerfile.nextjs
@@ -7,6 +7,7 @@ ARG DEV_BUILD="False"
 USER builder
 
 RUN npm i && \
+    npx prisma db push --accept-data-loss && \
     npm run build && \
     # if ! dev npm prune for production else run cypress
     if [ "$DEV_BUILD" = "True" ]; then npm start & npx wait-on http://localhost:3000; else npm prune --production && npm run start; fi
