--- a/Dockerfile.nextjs
+++ b/Dockerfile.nextjs
@@ -11,5 +11,4 @@ RUN npm i && \
     # if ! dev npm prune for production else run cypress
     if [ "$DEV_BUILD" = "True" ]; then npm start & npx wait-on http://localhost:3000; else npm prune --production && npm run start; fi
 
-CMD ["npx", "prisma", "db", "push", "--accept-data-loss"]
-ENTRYPOINT ["npm", "run", "start"]
+CMD ["npx", "prisma", "db", "push", "--accept-data-loss", "&&", "npm", "run", "start"]
