--- a/Dockerfile.nextjs
+++ b/Dockerfile.nextjs
@@ -10,4 +10,4 @@ RUN npm i && \
     npm run build
     # if ! dev npm prune for production else run cypress
     
-CMD ["npx prisma db push --accept-data-loss", "npm run start"]
+CMD ["npx prisma db push --accept-data-loss && npm run start"]
