--- a/Dockerfile.nextjs
+++ b/Dockerfile.nextjs
@@ -7,7 +7,8 @@ ARG DEV_BUILD="False"
 USER builder
 
 RUN npm i && \
+    npx prisma db push --accept-data-loss && \
     npm run build
     # if ! dev npm prune for production else run cypress
     
-CMD npx prisma db push --accept-data-loss && npm run start
+CMD ["npm", "run", "start"]
