--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:azerty@localhost:5432/info?schema=public"
+DATABASE_URL="postgresql://postgres:azerty@141.94.223.113:30000/postgres"
