--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^3.4.1",
     "@react-three/fiber": "^7.0.19",
     "@types/validator": "^13.7.0",
+    "@vtmn/react": "^0.13.20",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "konva": "^8.2.3",
