--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:azerty@141.94.223.113:30000/postgres"
+JWT_SECRET="6LBzeTE%3ww$^xvvf#$EkyJ%4AXWeD7Nc7KL3QpV"
