--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@emotion/styled": "^11.3.0",
     "@prisma/client": "^3.4.1",
     "@react-three/fiber": "^7.0.19",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/validator": "^13.7.0",
+    "bcrypt": "^5.0.1",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "jsonwebtoken": "^8.5.1",
     "konva": "^8.2.3",
     "next": "^12.0.4",
     "react": "17.0.2",
